--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Consultorio Médico - Agendar Citas</title>
+    <title>ClickSalud - Agendar Citas con especialistas</title>
     <style>
         /* Reset básico */
         body, h1, h2, p, ul, li {
@@ -135,7 +135,7 @@
 <body>
     <header>
         <div>
-            <h1>Consultorio Médico</h1>
+            <h1>Clicksalud</h1>
             <p>Agenda tu cita con profesionales de la salud altamente capacitados</p>
         </div>
     </header>
@@ -176,7 +176,7 @@
                 <!-- Doctor 3 -->
                 <div class="doctor-card">
                     <img src="https://randomuser.me/api/portraits/men/50.jpg" alt="Dr. Carlos Martínez" />
-                    <h3>Dr. Carlos Martínez</h3>
+                    <h3>Dr. Carlos Mejia </h3>
                     <p>Dermatología</p>
                     <button onclick="window.location.href='http://127.0.0.1:5500/index4.html'">Solicitar Cita</button>
                 </div>
@@ -199,7 +199,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Consultorio Médico</p>
+        <p>&copy; 2025 ClickSalud consultorio medico</p>
     </footer>
 </body>
 </html>
