--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ClickSalud - Agendar Citas con especialistas</title>
     <style>
-        /* Reset básico */
         body, h1, h2, p, ul, li {
             margin: 0;
             padding: 0;
@@ -65,6 +64,36 @@
             width: 90%;
             max-width: 1000px;
             margin: 30px auto;
+        }
+
+        /* Video */
+        .video-section {
+            text-align: center;
+            margin-bottom: 40px;
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+        }
+        .video-section h2 {
+            margin-bottom: 20px;
+            color: #007bff;
+        }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* For a 16:9 aspect ratio (height 315 / width 560) */
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+            background: #000;
+            margin: 0 auto;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
 
         /* Doctores */
@@ -149,6 +178,14 @@
     </nav>
 
     <div class="container">
+        <section id="home" class="video-section">
+            <h2>Bienvenido a ClickSalud</h2>
+            <p>Descubre cómo ClickSalud te ayuda a agendar tus citas médicas de forma fácil y rápida.</p>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HsDBbRqI1Lk?si=Cmz4SSYFLIGqF3S0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+
         <section id="about" style="margin-bottom: 40px;">
             <h2 style="text-align: center; margin-bottom: 20px;">Sobre Nosotros</h2>
             <p style="max-width: 700px; margin: 0 auto; text-align: justify;">
@@ -159,37 +196,32 @@
         <section id="doctors">
             <h2 style="text-align: center; margin-bottom: 30px;">Nuestros Doctores</h2>
             <div class="doctors">
-                <!-- Doctor 1 -->
                 <div class="doctor-card">
-                    <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="Dr. Juan Pérez" />
+                    <img src="https://randomuser.me/api/portraits/men/70.jpg" alt="Dr. Juan Pérez" />
                     <h3>Dr. Juan Pérez</h3>
                     <p>Medicina General</p>
                     <button onclick="window.location.href='http://127.0.0.1:5500/index4.html'">Solicitar Cita</button>
                 </div>
-                <!-- Doctor 2 -->
                 <div class="doctor-card">
-                    <img src="https://randomuser.me/api/portraits/women/75.jpg" alt="Dra. Ana López" />
+                    <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="Dra. Ana López" />
                     <h3>Dra. Ana López</h3>
                     <p>Pediatría</p>
-                    <button onclick="window.location.href=' http://127.0.0.1:5500/index4.html'">Solicitar Cita</button>
+                    <button onclick="window.location.href='http://127.0.0.1:5500/index4.html'">Solicitar Cita</button>
                 </div>
-                <!-- Doctor 3 -->
                 <div class="doctor-card">
-                    <img src="https://randomuser.me/api/portraits/men/50.jpg" alt="Dr. Carlos Martínez" />
+                    <img src="https://randomuser.me/api/portraits/men/55.jpg" alt="Dr. Carlos Martínez" />
                     <h3>Dr. Carlos Mejia </h3>
                     <p>Dermatología</p>
                     <button onclick="window.location.href='http://127.0.0.1:5500/index4.html'">Solicitar Cita</button>
                 </div>
-                <!-- Doctor 4 -->
                 <div class="doctor-card">
-                    <img src="https://randomuser.me/api/portraits/women/45.jpg" alt="Dra. Mariana García" />
+                    <img src="https://randomuser.me/api/portraits/women/40.jpg" alt="Dra. Mariana García" />
                     <h3>Dra. Mariana García</h3>
                     <p>Ginecología</p>
                     <button onclick="window.location.href='http://127.0.0.1:5500/index4.html'">Solicitar Cita</button>
                 </div>
-                <!-- Doctor 5 -->
                 <div class="doctor-card">
-                    <img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Dr. Luis Ramírez" />
+                    <img src="https://randomuser.me/api/portraits/men/60.jpg" alt="Dr. Luis Ramírez" />
                     <h3>Dr. Luis Ramírez</h3>
                     <p>Cardiología</p>
                     <button onclick="window.location.href='http://127.0.0.1:5500/index4.html'">Solicitar Cita</button>
@@ -199,7 +231,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 ClickSalud consultorio medico</p>
+        <p>© 2025 ClickSalud consultorio medico</p>
     </footer>
 </body>
 </html>
